--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/express": "^4.17.21",
     "@types/inquirer": "^8.2.5",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.11.22",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
