--- a/package.json
+++ b/package.json
@@ -85,14 +85,16 @@
   "dependencies": {
     "@nestia/core": "^5.0.0",
     "@nestia/fetcher": "^5.0.0",
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/core": "^11.0.11",
-    "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/common": "^11.0.12",
+    "@nestjs/core": "^11.0.12",
+    "@nestjs/microservices": "^11.0.12",
+    "@nestjs/platform-express": "^11.0.12",
     "@prisma/client": "^6.5.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "git-last-commit": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "prisma": "^6.5.0",
     "serialize-error": "^4.1.0",
     "source-map-support": "^0.5.19",
